--- a/index.html
+++ b/index.html
@@ -5,10 +5,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" type="text/css" href="styles/style.css">
     <title> Text Editor </title>
 </head>
 
 <body>
+
+    <div class="wrapper">
+        <h2>HTML/CSS Text Editor</h2>
+
+        <div class="container">
+            <div><textarea rows='20' cols="50"></textarea></div>
+            <div><textarea rows='20' cols="50"></textarea></div>
+        </div>
+
+
+    </div>
 
 </body>
 
